Fix the API document api path issue.
